<resources>
    <string name="app_name">WebServiceLab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="course_id_hint">Enter Course Id (Ex: TCSS450)</string>
    <string name="course_short_desc_hint">Enter Course Short Description (Ex: Mobile App Programming)</string>
    <string name="course_long_desc_hint">Enter Course Long Description</string>
    <string name="course_prereqs_hint">Enter prereqs</string>
    <string name="add_course_text">Add Course</string>

    <string name="LOGIN_PREFS">edu.uw.tacoma.iskyles.webservicelab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Log out</string>

    <string name="LOGIN_FILE"> edu.uw.tacoma.iskyles.webservicelab.LOGIN_FILE</string>

</resources>
